fixing overflow

--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ section {
   height: 400px;
   width: 400px;
   margin: auto 0;
+  
 }
 
 .section__text {
@@ -210,12 +211,14 @@ section {
 
 /* ICONS */
 
-.icon, .icon-blog {
+.icon, 
+.icon-blog {
   cursor: pointer;
   height: 2rem;
 }
+
 .icon-blog {
-  transform: scale(1.5);
+  transform: scale(1.5, 1.5);
 }
 
 .arrow-up {
@@ -386,6 +389,7 @@ article .icon {
   border-color: rgb(163, 163, 163);
   text-align: center;
   max-width: 250px;
+  
 }
 
 #projects {
